5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1596_825.log
== TEST (2019-03-30 20:46:45) 
-- CODE:
raio=int(input("valor do raio"))
from math import*
area=pi*raio**2
volume=4/3*pi*raio**3
print(area)
print(volume)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:47:27) 
-- CODE:
raio=int(input("valor do raio"))
from math import*
area=pi*raio**2
volume=4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:47:32) 
-- CODE:
raio=int(input("valor do raio"))
from math import*
area=pi*raio**2
volume=4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME:
0.146573
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/825/main.py", line 1, in <module>
    raio=int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:48:54) 
-- CODE:
raio=int(input("valor do raio"))
pi=from math import*
area=pi*raio**2
volume=4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
-- ERROR:
File "XXXX", line 2
    pi=from math import*
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:49:16) 
-- CODE:
raio=int(input("valor do raio"))
from math import*
area=pi*raio**2
volume=4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:49:38) 
-- CODE:
raio=int(input("valor do raio"))
from math import*
area=pi*raio**2
volume=4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME:
0.145692
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/825/main.py", line 1, in <module>
    raio=int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:50:44) 
-- CODE:
raio=int(input("valor do raio"))
from math import*
area=pi*raio**2
volume=4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:51:00) 
-- CODE:
raio=float(input("valor do raio"))
from math import*
area=pi*raio**2
volume=4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:51:07) 
-- CODE:
raio=float(input("valor do raio"))
from math import*
area=pi*raio**2
volume=4/3*pi*raio**3
print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME:
0.124308
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
